pilot/pkg/security/authz/builder/testdata/tcp/allow-only-http-in.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: httpbin-deny
  namespace: foo
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: [ "id-1" ]
      to:
        - operation:
            methods: [ "GET" ]
    - from:
        - source:
            namespaces: [ "ns-1" ]
      to:
        - operation:
            hosts: [ "example.com" ]
