pilot/pkg/security/authz/builder/testdata/tcp/allow-only-http-out.yaml
name: envoy.filters.network.rbac
typedConfig:
  '@type': type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
  rules: { }
  shadowRulesStatPrefix: istio_dry_run_allow_
  statPrefix: tcp.
