pilot/pkg/security/authz/builder/testdata/tcp/custom-both-http-tcp-out2.yaml
name: envoy.filters.network.ext_authz
typedConfig:
  '@type': type.googleapis.com/envoy.extensions.filters.network.ext_authz.v3.ExtAuthz
  failureModeAllow: true
  filterEnabledMetadata:
    filter: envoy.filters.network.rbac
    path:
      - key: istio_ext_authz_shadow_effective_policy_id
    value:
      stringMatch:
        prefix: istio-ext-authz
  grpcService:
    envoyGrpc:
      authority: my-custom-ext-authz.foo.svc.cluster.local
      clusterName: outbound|9000||my-custom-ext-authz.foo.svc.cluster.local
    timeout: 0.002s
  statPrefix: tcp.
  transportApiVersion: V3
