pilot/pkg/security/authz/builder/testdata/tcp/custom-only-http-in.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: httpbin-1
  namespace: foo
spec:
  action: CUSTOM
  provider:
    name: default
  selector:
    matchLabels:
      app: httpbin
      version: v1
  rules:
    - to:
        - operation:
            paths: [ "/httpbin1" ]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: httpbin-2
  namespace: foo
spec:
  action: CUSTOM
  provider:
    name: default
  selector:
    matchLabels:
      app: httpbin
      version: v1
  rules:
    - to:
        - operation:
            paths: [ "/httpbin2" ]
